Fixes photo thumbnail rotate flicker.

--- a/app/styles/_singlePhoto.scss
+++ b/app/styles/_singlePhoto.scss
@@ -93,6 +93,7 @@
     width: 70px;
     border: 1px solid rgba(255,255,255,0.15);
     border-right: none;
+    border-bottom: none;
     position: relative;
     display: inline-block;
 
